--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <div class="container">
         <h2>Welcome to our Art Supplies Store!</h2>
         <p>We offer a wide range of high-quality art materials for all your creative needs.</p>
-        <label for="search">Search:</label>
-        <input type="text" placeholder="Search for products...">
+       <label for="search-bar" class="search-label">Search Product:</label>
+            <input type="text" id="search-bar" class="search-bar" placeholder="Search...">
         <div class="product">
             <img src="paintbrush.jpg" alt="Paintbrush">
             <h3>Paintbrush Set</h3>
